# Comshell

./: .gitignore  .project  1, Comshell  1, Comshell.txt  1, command based UI.txt  1, command based user interface.txt  1, computers.txt  1, programming.txt  1.txt  2, Comshell.txt  2, Julia.txt  2, Rust.txt  2, command based UI.txt  2, computers  2, computers.txt  2, g'u'i.txt  2, graphics.txt  2, programming.txt  3, Arch Linux  3, ArchLinux  3, ArchLinux.txt  3, Comshell.txt  3, GTK.txt  3, GUI.txt  3, Pony  3, Pony programming language  3, Rust  3, Rust.txt  3, f'r'p.txt  3, functional reactive programming.txt  3, functional reactive.txt  3, graphics.txt  3, useful libs.txt  3.txt  4, Arch Linux.txt  4, Atom.txt  4, Codev.txt  4, Elixir  4, GTK  4, GTK.txt  (+75 more)
ArchLinux/: arc  arch  arch.sh  codev  comshell.js  config.sh  extension.js  gtk.css  init.el  install.sh  instarch  overlay.js  sway  swayshell.js  system_monitor.js  web.js
Atom/: config.cson  i3.config  init-new.js  init.js  init.js.unsaved  init1.js  init2.js  keymap.cson  state-store.js  status-bar-date-time.js  status-bar.js  styles.less  tree-view.js
Comshell/: comshell.act  editor.act  files'tree.act  files-tree.act  gallery.act  project.act  web'browser.act  web-browser.act
Linux/: 1  alacritty.yml  bash_profile  gtk.css  lxterminal.conf  override.conf  sakura.conf  sway.config
cargo/: Cargo.toml  build.rs
cargo/.cargo/: config
comshell-proto/: main.html  package.json  project-files.js  project-views.js  project-workspace.js  projects-list.js  style.css  widgets.js
demo/: sway.txt
development environment/: 1.txt  i3config  init.el
emacs/: init.el
etc/: arch-install.sh  bashrc  extension.js  gtk.css  sway  sway-config  waybar-config  waybar-style.css  waybar.css
linux/: 1
prototype/: 1.txt  Comshell.lua  comshell.dg  comshell.gs  comshell.js  comshell.lua  dir-tree.el  editor.dg  editor.gs  editor.js  editor.lua  editor.rs  files_tree.dg  files_tree.gs  files_tree.js  files_tree.lua  gallery.dg  gallery.gs  gallery.js  gallery.lua  galley.rs  globals.lua  i3.conf  i3.config  i3status.config  init.el  main.rs  metadata.json  modalka.el  org-indent.el  project-tree.el  project.dg  project.gs  project.js  project.lua  projects-list.el  sway  sway.config  sway.txt  utils.lua  (+5 more)
src/: datetime.rs  editor.rs  files_tree.rs  galley.rs  main.rs  (+3 more)
(+82 files in other folders)
