[package]
name = "comshell"
version = "0.1.0"
authors = ["Damoon Saghian <damoonsaghian84@gmail.com>"]
description = "a unified computing environment, utilizing command based user interface"
repository = "https://github.com/damoonsaghian/Comshell"
license = "Unlicense"
edition = "2018"

[[bin]]
path = "main.rs"

[dependencies]
may_actor = ""
gtk-fnonce-on-eventloop = "0.2.1"
Gtk = { version = "0.6.0", features = ["v3_24"] }
gdk = { version = "0.10.0", features = ["v3_24"] }
sourceview = { version = "0.6.0", features = ["v3_24"] }
webkit2gtk = { version = "", features = ["v2_16"] }
chrono = ""
chrono-tz = ""
timer = "0.2.0"
