[package]
name = "comshell"
version = "0.1.0"
authors = ["Damoon Saghian <damoonsaghian84@gmail.com>"]
description = "a unified computing environment, utilizing command based user interface"
repository = "https://github.com/damoonsaghian/Comshell"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
may_actor = "0.2.2"
gtk-fnonce-on-eventloop = "0.2.1"
gtk = { version = "0.6.0", features = ["v3_24"] }
gdk = { version = "0.10.0", features = ["v3_24"] }
sourceview = { version = "0.6.0", features = ["v3_24"] }
webkit2gtk = { version = "0.6.0", features = ["v2_16"] }
chrono = "0.4.6"
timer = "0.2.0"
