[package]
name = "comshell"
version = "0.1.0"
description = "a unified computing environment, utilizing command based user interface"
repository = "https://github.com/damoonsaghian/Comshell"
authors = ["Damoon Saghian <damoonsaghian84@gmail.com>"]
license = "Unlicense"
edition = "2018"

[dependencies]
may_actor = "0.2.2"
chrono = "0.4.6"
gio = { version = "0.7.0", features = ["v2_60"] }
gdk = { version = "0.11.0", features = ["v3_24"] }
gtk = { version = "0.7.0", features = ["v3_24"] }
sourceview = { version = "0.7.0", features = ["v3_24"] }
webkit2gtk = { version = "0.7.0", features = ["v2_16"] }
