[package]
name = "Comshell"
version = "0.1.0"
authors = ["Damoon Saghian <damoonsaghian84@gmail.com>"]
description = "command based user interface"
license = "MIT"

[[bin]]
name = "comshell"
path = "../main.rs"

[dependencies]
futures = "*"
futures-cpupool = "*"
gfx_window_glutin = "*"
piston2d-graphics = "*"
piston2d-gfx_graphics = "*"
